// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders children passed to it 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    <Classify(Icon)
      src={[Function]}
    />
  </button>
  <ul>
    <div>
      Child 1
    </div>
    <div>
      Child 2
    </div>
    <div>
      Child 3
    </div>
  </ul>
</div>
`;

exports[`it renders correctly without children 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    <Classify(Icon)
      src={[Function]}
    />
  </button>
  <ul />
</div>
`;
